# NumMethods

./: CMakeLists.txt  README.md  makefile
src/: CMakeLists.txt  essentials.cpp  essentials.hpp  test.cpp
